--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+APP_PORT=8080
+FORWARD_DB_PORT=3307
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
